# imperialist-competitive-algorithm

./: CMakeLists.txt  README.md  main.cpp
configs/: ica.cfg
include/ica/: imperialist_alg.h  solver_opencl.h  solver_serial.h  solver_smp.h
include/ica/benchmarks/: ICABenchmarkFunctions.h
include/ica/iface/: ICASolver.h  utils.h
src/: imperialist_alg.cpp  solver_opencl.cpp  solver_serial.cpp  solver_smp.cpp
src/benchmarks/: ICABenchmarkFunctions.cpp
src/iface/: ICASolver.cpp
